[FLINK-38802][table] DDL with duplicated keys in table options should not fail